--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,15 +10,16 @@
 
   <body>
     <header>
-      <h1>Super Chat</h1>
+      <h1>CSC 352 Chatroom!</h1>
     </header>
 
     <section>
       <div id="change_username">
-	<input id="username" type="text" />
-	<button id="send_username" type="button">Change username</button>
+        <input id="username" type="text" />
+        <button id="send_username" type="button">Please enter a username.</button>
       </div>
     </section>
+
 
     <section id="chatroom">
       <section id="feedback"></section>
