--- a/public/style.css
+++ b/public/style.css
@@ -17,37 +17,47 @@ html {
 body {
     margin: 0px;
     height: 100%;
+    background-color: black;
+    color: white;
 }
 
 header {
-    text-align: center;
+    text-align: left;
+    text-decoration: underline;
+    margin-bottom: 20px;
+    margin-left: 20px;
 }
 
 h1 {
-    font-family: 'Comfortaa', sans-serif;
-    margin: 0px;
+    font-family: Verdana, sans-serif;
 }
 
 div#change_username, section#input_zone {
-    border: 5px outset #8258FA;
+    border: 2px outset red;
 }
 
 div#change_username {
     height: 3%;
+    margin-left: 20px;
+    margin-bottom: 20px;
     display: inline-block;
-    background-color: #BCA9F5;
+    background-color: red;
 }
 
 section#chatroom {
-    border: 5px inset #8258FA;
+    margin-left: 20px;
+    margin-right: 20px;
+    border: 5px inset red;
     height: 85%;
     overflow: auto;
 }
 
 section#input_zone {
     height: 7%;
+    margin-left: 20px;
+    margin-right: 20px;
     text-align: center;
-    background-color: #BCA9F5;
+    background-color: red;
 }
 
 .vertical-align {
@@ -58,15 +68,10 @@ section#input_zone {
     transform: translateY(-50%);
 }
 
-input#username {
-    font-family: 'Comfortaa', sans-serif;
-}
-
 input#message {
     display: inline-block;
     width: 88%;
     height: 70%;
-    font-family: 'Comfortaa', sans-serif;
     font-size: 2vh;
 }
 
@@ -81,14 +86,13 @@ p.message {
     width: 100%;
     height: 40px;
     font-size: 2vh;
-    font-family: 'Comfortaa', sans-serif;
     padding: 1vh;
 }
 
 .message:nth-child(even) {
-    background-color: #81DAF5;
+    background-color: #555555;
 }
 
 .message:nth-child(odd) {
-    background-color: #81BEF7;
+    background-color: black;
 }
